--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   "author": "Diego Araújo <diegoedaraujo@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev":"ts-node-dev --transpile-only src/server.ts"
+    "dev": "ts-node-dev --transpile-only src/server.ts",
+    "typeorm": "ts-node-dev node_modules/typeorm/cli"
   },
   "dependencies": {
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "pg": "^8.7.1",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.41"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
