--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "typeorm": "ts-node-dev node_modules/typeorm/cli"
   },
   "dependencies": {
+    "dotenv": "^14.2.0",
     "express": "^4.17.2",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
